--- a/docs-page.html
+++ b/docs-page.html
@@ -308,21 +308,21 @@ public class MyDoozerTest extends DoozerTest {}</code></pre>
 									<div class="docs-code-block">
 										<pre class="shadow-lg rounded">
 <code class="language-shell">├── pom.xml
-├── src
-	├── main
-	│   └── java
-	│       └── com
-	│           └── mycompany
-	│               └── app
-	│                   └── App.java
-	└── test
-		└── java
-			└── com
-				└── mycompany
-					└── app
-						├── AppTest.java
-						├── MyDoozerTest.java
-						└── scripts</code></pre>
+└── src
+    ├── main
+    │	└── java
+    │	    └── com
+    │	        └── mycompany
+    │	            └── app
+    │	                └── App.java
+    └── test
+        └── java
+            └── com
+                └── mycompany
+                    └── app
+    	                ├── AppTest.java
+    	                ├── MyDoozerTest.java
+    	                └── scripts</code></pre>
 									</div><!--//docs-code-block-->
 									App.java and AppTest.java were created by <code>mvn archetype:generate</code> and it is safe to remove them.
 								</li>
