--- a/docs-page.html
+++ b/docs-page.html
@@ -1168,7 +1168,7 @@ mvn test -Ddoozer.directory=src/test/java/dev/softtest/doozer/scripts/</code></p
 						    <p>doozer is an open source project and you can find its repository on GitHub:
 								<ul>
 									<li><a href="https://github.com/mkgiepard/doozer">doozer</a></li>
-									<li><a href="https://github.com/mkgiepard/doozer-vscode-ext>">doozer VSCode extension</a></li>
+									<li><a href="https://github.com/mkgiepard/doozer-vscode-ext">doozer VSCode extension</a></li>
 								</ul>
 								It is distributed according to <a href="http://www.apache.org/licenses/LICENSE-2.0.txt">The Apache License, Version 2.0</a>
 							</p>
