docs> open links in new tab

--- a/docs-page.html
+++ b/docs-page.html
@@ -44,9 +44,9 @@
 	            <div class="docs-top-utilities d-flex justify-content-end align-items-center">
 	
 					<ul class="social-list list-inline mx-md-3 mx-lg-5 mb-0 d-none d-lg-flex">
-						<li class="list-inline-item"><a href="#"><i class="fab fa-github fa-fw"></i></a></li>
-			            <li class="list-inline-item"><a class="xlink" href="#"><i class="fab fa-twitter fa-fw"></i></a></li>
-						<li class="list-inline-item"><a class="mlink" href="#"><i class="fas fa-contact-card fa-fw"></i></a></li>
+						<li class="list-inline-item"><a href="https://github.com/mkgiepard/doozer" target="_blank"><i class="fab fa-github fa-fw"></i></a></li>
+			            <li class="list-inline-item"><a class="xlink" href="#" target="_blank"><i class="fab fa-twitter fa-fw"></i></a></li>
+						<li class="list-inline-item"><a class="mlink" href="#" target="_blank"><i class="fas fa-contact-card fa-fw"></i></a></li>
 		            </ul><!--//social-list-->
 	            </div><!--//docs-top-utilities-->
             </div><!--//container-->
@@ -213,14 +213,14 @@
 						<h2 class="section-heading">Prerequisites</h2>
 						<p>Mandatory:
 							<ul>
-								<li><a href="https://www.oracle.com/java/technologies/downloads/">Java SDK 17+</a></li>
-								<li><a href="https://maven.apache.org/download.cgi">Maven</a> (<a href="https://maven.apache.org/install.html">installation</a>)</li>
+								<li><a href="https://www.oracle.com/java/technologies/downloads/" target="_blank">Java SDK 17+</a></li>
+								<li><a href="https://maven.apache.org/download.cgi" target="_blank">Maven</a> (<a href="https://maven.apache.org/install.html">installation</a>)</li>
 							</ul>
 						</p>
 						<p>Optional:
 							<ul>
-								<li><a href="https://code.visualstudio.com/">Visual Studio Code</a></li>
-								<li><a href="https://marketplace.visualstudio.com/items?itemName=softtest-dev.doozer-highlight">VSCode: Doozer extension</a>
+								<li><a href="https://code.visualstudio.com/" target="_blank">Visual Studio Code</a></li>
+								<li><a href="https://marketplace.visualstudio.com/items?itemName=softtest-dev.doozer-highlight" target="_blank">VSCode: Doozer extension</a>
 								for syntax highlighting while creating doozer scripts.</li>
 							</ul>
 						</p>
@@ -1167,10 +1167,10 @@ mvn test -Ddoozer.directory=src/test/java/dev/softtest/doozer/scripts/</code></p
 					    <section class="docs-intro">
 						    <p>doozer is an open source project and you can find its repository on GitHub:
 								<ul>
-									<li><a href="https://github.com/mkgiepard/doozer">doozer</a></li>
-									<li><a href="https://github.com/mkgiepard/doozer-vscode-ext">doozer VSCode extension</a></li>
+									<li><a href="https://github.com/mkgiepard/doozer" target="_blank">doozer</a></li>
+									<li><a href="https://github.com/mkgiepard/doozer-vscode-ext" target="_blank">doozer VSCode extension</a></li>
 								</ul>
-								It is distributed according to <a href="http://www.apache.org/licenses/LICENSE-2.0.txt">The Apache License, Version 2.0</a>
+								It is distributed according to <a href="http://www.apache.org/licenses/LICENSE-2.0.txt" target="_blank">The Apache License, Version 2.0</a>
 							</p>
 						</section><!--//docs-intro-->
 				    </header>
@@ -1179,10 +1179,9 @@ mvn test -Ddoozer.directory=src/test/java/dev/softtest/doozer/scripts/</code></p
 			    <footer class="footer">
 				    <div class="container text-center py-5">
 				        <ul class="social-list list-unstyled pt-4 mb-0">
-						    <li class="list-inline-item"><a href="#"><i class="fab fa-github fa-fw"></i></a></li> 
-				            <li class="list-inline-item"><a class="xlink" href="#"><i class="fab fa-twitter fa-fw"></i></a></li>
-				            <li class="list-inline-item"><a href="#"><i class="fab fa-product-hunt fa-fw"></i></a></li>
-							<li class="list-inline-item"><a class="mlink" href="#"><i class="fas fa-contact-card fa-fw"></i></a></li>
+						    <li class="list-inline-item"><a href="https://github.com/mkgiepard/doozer" target="_blank"><i class="fab fa-github fa-fw"></i></a></li> 
+				            <li class="list-inline-item"><a class="xlink" href="#" target="_blank"><i class="fab fa-twitter fa-fw"></i></a></li>
+							<li class="list-inline-item"><a class="mlink" href="#" target="_blank"><i class="fas fa-contact-card fa-fw"></i></a></li>
 				        </ul><!--//social-list-->
 
 						<!--/* This template is free as long as you keep the footer attribution link. If you'd like to use the template without the attribution link, you can buy the commercial license via our website: themes.3rdwavemedia.com Thank you for your support. :) */-->
