docs> open new tabs for links

--- a/index.html
+++ b/index.html
@@ -33,10 +33,9 @@
 	            <div class="docs-top-utilities d-flex justify-content-end align-items-center">
 	
 					<ul class="social-list list-inline mx-md-3 mx-lg-5 mb-0 d-none d-lg-flex">
-						<li class="list-inline-item"><a href="#"><i class="fab fa-github fa-fw"></i></a></li>
-			            <li class="list-inline-item"><a class="xlink" href="#"><i class="fab fa-twitter fa-fw"></i></a></li>
-		                <li class="list-inline-item"><a href="#"><i class="fab fa-product-hunt fa-fw"></i></a></li>
-						<li class="list-inline-item"><a class="mlink" href="#"><i class="fas fa-contact-card fa-fw"></i></a></li>
+						<li class="list-inline-item"><a href="https://github.com/mkgiepard/doozer" target="_blank"><i class="fab fa-github fa-fw"></i></a></li>
+			            <li class="list-inline-item"><a class="xlink" href="#" target="_blank"><i class="fab fa-twitter fa-fw"></i></a></li>
+						<li class="list-inline-item"><a class="mlink" href="#" target="_blank"><i class="fas fa-contact-card fa-fw"></i></a></li>
 		            </ul><!--//social-list-->
 	            </div><!--//docs-top-utilities-->
             </div><!--//container-->
@@ -170,10 +169,9 @@
 	    <div class="footer-bottom text-center py-5">
 		    
 		    <ul class="social-list list-unstyled pb-4 mb-0">
-			    <li class="list-inline-item"><a href="#"><i class="fab fa-github fa-fw"></i></a></li> 
-	            <li class="list-inline-item"><a class="xlink" href="#"><i class="fab fa-twitter fa-fw"></i></a></li>
-	            <li class="list-inline-item"><a href="#"><i class="fab fa-product-hunt fa-fw"></i></a></li>
-				<li class="list-inline-item"><a class="mlink" href="#"><i class="fas fa-contact-card fa-fw"></i></a></li>
+			    <li class="list-inline-item"><a href="https://github.com/mkgiepard/doozer" target="_blank"><i class="fab fa-github fa-fw"></i></a></li> 
+	            <li class="list-inline-item"><a class="xlink" href="#" target="_blank"><i class="fab fa-twitter fa-fw"></i></a></li>
+				<li class="list-inline-item"><a class="mlink" href="#" target="_blank"><i class="fas fa-contact-card fa-fw"></i></a></li>
 	        </ul><!--//social-list-->
 	        
 	        <!--/* This template is free as long as you keep the footer attribution link. If you'd like to use the template without the attribution link, you can buy the commercial license via our website: themes.3rdwavemedia.com Thank you for your support. :) */-->
