--- a/docs-page.html
+++ b/docs-page.html
@@ -8,8 +8,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <meta name="description" content="Documentation for doozer project">
-    <meta name="author" content="Mariusz Gieparda at softtest.dev">    
+    <meta name="description" content="Documentation for the doozer project">
+    <meta name="author" content="Mariusz at softtest.dev">    
     
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700&display=swap" rel="stylesheet">
