--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en"> 
 <head>
-    <title>doozerDocs - Documentation page for the doozer project</title>
+    <title>Dead simple UI testing framework | doozer</title>
 	<link rel="canonical" href="https://doozer.softtest.dev" />
     
     <!-- Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Documentation for doozer project">
-    <meta name="author" content="Mariusz Gieparda at softtest.dev">    
+    <meta name="description" content="Fast, simple and reliable end-to-end testing for web applications.">
+	<meta name="keywords" content="UI testing, webdriver, selenium, cypress, playwright, testing, test automation, web test automation">
+    <meta name="author" content="Mariusz at softtest.dev">    
     
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700&display=swap" rel="stylesheet">
