new> ads scripts

--- a/index.html
+++ b/index.html
@@ -21,6 +21,25 @@
     <!-- Theme CSS -->  
     <link id="theme-style" rel="stylesheet" href="assets/css/theme.css">
 
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16648171557"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-16648171557');
+</script>
+
+<!-- Event snippet for Wyświetlenie strony conversion page -->
+<script>
+	gtag('event', 'conversion', {
+		'send_to': 'AW-16648171557/hP54CLL7l8QZEKXgu4I-',
+		'value': 1.0,
+		'currency': 'CHF'
+	});
+  </script>
+
 </head> 
 
 <body>    
@@ -210,7 +229,6 @@
 			xlinks[xlink].href = `${xwhere}${xwho}`;
 		}
 	</script>
-
 </body>
 </html> 
 
