new> adding screenshots of a test script and test report page

--- a/docs-page.html
+++ b/docs-page.html
@@ -25,7 +25,7 @@
     <link id="theme-style" rel="stylesheet" href="assets/css/theme.css">
 
 	<!-- Page CSS --> 
-	<link id="theme-style" rel="stylesheet" href="assets/css/style.css">
+	<link id="page-style" rel="stylesheet" href="assets/css/style.css">
 
 	<!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16648171557"></script>
