--- a/test-pages/webform.html
+++ b/test-pages/webform.html
@@ -9,6 +9,7 @@
     <style>
         body {
             font-family: "Poppins", sans-serif;
+            font-size: xx-large;
             color: #252930;
         }
         .container {
@@ -18,6 +19,7 @@
             text-align: center;
         }
         input, button {
+            font-size: xx-large;
             margin-left: 12px;
         }
     </style>
