--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <!-- Theme CSS -->  
     <link id="theme-style" rel="stylesheet" href="assets/css/theme.css">
 
+	<!-- Page CSS --> 
+	<link id="page-style" rel="stylesheet" href="assets/css/style.css">
+
 	<!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16648171557"></script>
 <script>
@@ -173,6 +176,16 @@
 				    </div><!--//col-->
 			    </div><!--//row-->
 		    </div><!--//container-->
+			<section class="docs-section" id="item-1-2">
+				<div class="simplelightbox-gallery row mb-2">
+					<div class="col-12 col-md-6 mb-2">
+						<a href="assets/images/doozer-test.png"><img class="figure-img img-fluid shadow rounded h450" src="assets/images/doozer-test.png" alt="" title="Doozer Test Case example"/></a>
+					</div>
+					<div class="col-12 col-md-6 mb-2">
+						<a href="assets/images/doozer-test-report.png"><img class="figure-img img-fluid shadow rounded h450" src="assets/images/doozer-test-report.png" alt="" title="Doozer Test Case Report page"/></a>
+					</div><!--//col-->
+				</div><!--//gallery-->
+			</section>
 		</div><!--//container-->
     </div><!--//page-content-->
 
