--- a/test-pages/hello.html
+++ b/test-pages/hello.html
@@ -9,6 +9,7 @@
     <style>
         body {
             font-family: "Poppins", sans-serif;
+            font-size: xx-large;
             color: #252930;
         }
         .container {
